Fixed bug with navbar shifting with open modal.

--- a/css/main.css
+++ b/css/main.css
@@ -362,7 +362,13 @@ body{
   position: fixed;
 }
 
-.modal-open .body{
-  overflow: hidden;
-position:fixed;
+.modal-open .navbar{
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding: 0 !important;
+}
+
+.close{
+  font-size: 50px;
+  margin: 20px;
 }
